--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -8,6 +8,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
 @import url('https://fonts.googleapis.com/css?family=Oxygen');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css');
 
 /* local-files */
 @import "emogi";
