update style changes

--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -53,7 +53,8 @@ body {
   margin-bottom: 40px!important;
 }
 .danger-border {
-  border: 2px solid #F44336;
+  border: 2px solid #989898;
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.5);
 }
 .grey-bg {
   background: #808080!important;
