--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -4,27 +4,28 @@
             <div class="row">
                 <div class="col-md-12">
                     <timeline>
-                        <timeline-event ng-repeat="message in home.timeline track by $index" side="{{message.from == 'me' ? 'right' : 'left'}}"
+                        <timeline-event ng-repeat="message in home.timeline track by $index"
+                                        side="{{message.from == 'BOT' ? 'left' : 'right'}}"
                                         when-visible="home.animateElementIn"
                                         when-not-visible="home.animateElementOut">
-                            <timeline-badge title="Play" data-ng-click="home.playAudio(message.content)"
-                                            class="cursor no-timeline-badge-shadow {{message.from == 'me' ? 'success' : 'danger'}}">
+                            <timeline-badge title="Play" data-ng-click="home.playAudio(message.text)"
+                                            class="cursor no-timeline-badge-shadow {{message.from == 'BOT' ? 'danger' : 'success'}}">
                                 <i class="fa hvr-grow-shadow fa-volume-up"></i>
                             </timeline-badge>
                             <timeline-panel class="timeline-panel-style">
                                 <timeline-heading>
-                                    <h4 ng-bind="message.from == 'me' ? '' : 'Bot'"></h4>
+                                    <h4 ng-bind="message.from == 'BOT' ? 'Bot' : ''"></h4>
                                 </timeline-heading>
-                                <p>{{message.content}}</p>
+                                <p>{{message.text}}</p>
                                 <p class="time">
-                                    <span data-ng-bind="message.date | timeAgo"></span> .
+                                    <span data-ng-bind="message.timestamp | timeAgo"></span> .
                                     <span data-ng-show="message.react" class="em no-cursor {{message.react}}"></span>
                                     <i data-ng-show="!message.react" class="fa fa-smile-o emogi" aria-hidden="true"
                                        popover-is-open="message.isPopover" uib-popover-template="'emogiTemplate.html'"
                                        popover-placement="bottom-left" popover-append-to-body="true"
                                        popover-trigger="'outsideClick'"></i>
-                                    <span class="sent-from pull-right" data-balloon="sent from" data-balloon-pos="down">
-                                        <i ng-class="{'fa-phone': message.from == 'me', 'fa-globe': message.from != 'me'}"
+                                    <span class="sent-from pull-right" data-balloon="sent from {{message.platform}}" data-balloon-pos="down">
+                                        <i ng-class="{'fa-phone': message.platform != 'web', 'fa-globe': message.platform == 'web'}"
                                            class="fa" aria-hidden="true"></i>
                                     </span>
                                 </p>
