added external lib locally

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -6,7 +6,7 @@
 
   <div class="container">
     <h1 class="logo cursive animated fadeIn">
-      <img class="animated pulse infinite" src="../images/logo.svg" height="250" alt="">
+      <img class="animated pulse infinite" src="images/logo.svg" height="250" alt="">
       <span class="hvr-shadow-radial">ҽ B◔T</span>
     </h1>
 
