--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -58,7 +58,8 @@ body {
 }
 .grey-bg {
   background: #808080!important;
-  color: #ffffff!important;;
+  color: #ffffff!important;
+  text-transform: initial !important;
 }
 
 .navbar-transparent {
