commit google analytics code, remove spinkit & change app loader

--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -40,7 +40,7 @@
       font-family: sans-serif !important;
       font-size: 12px;
       margin: 0;
-      color: #9e9e9e;
+      //color: #9e9e9e;
       .emogi {
         &:hover {
           text-decoration: underline;
@@ -74,7 +74,7 @@
     position: fixed;
     bottom: 18.6px;
     left: 6%;
-    z-index: 999;
+    //z-index: 999;
     width: 90%;
     .text-overlay {
       background-color: #0000002b;
