--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -264,3 +264,88 @@ body {
     }
   }
 }
+
+
+.app-loader {
+  z-index: 999999;
+  display: flex;
+  position: fixed;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  li {
+    height: 60px;
+    width: 60px;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    position: relative;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .selected {
+    opacity: 1;
+  }
+  .three-bounce{
+    z-index: 99999999;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    text-align:center;
+    font-size:26px;
+    position:relative;
+    top: 0;
+    width:100px;
+  }
+  .three-bounce > div {
+    display:inline-block;
+    width:18px;
+    height:18px;
+    border-radius:100%;
+    background-color:#fff;
+    -webkit-animation:bouncedelay 1.4s infinite ease-in-out both;
+    animation:bouncedelay 1.4s infinite ease-in-out both
+  }
+  .three-bounce .one{
+    -webkit-animation-delay:-0.32s;
+    animation-delay:-0.32s
+  }
+  .three-bounce .two{
+    -webkit-animation-delay:-0.16s;
+    animation-delay:-0.16s
+  }
+  @-webkit-keyframes bouncedelay{
+    0%, 80%, 100%{
+      -webkit-transform:scale(0)
+    }
+    40%{
+      -webkit-transform:scale(1)
+    }
+  }
+  @keyframes bouncedelay{
+    0%, 80%, 100%{
+      -webkit-transform:scale(0);
+      transform:scale(0)
+    }
+    40%{
+      transform:scale(1);
+      -webkit-transform:scale(1)
+    }
+  }
+}
+.app-loader::before {
+  content: '';
+  z-index: 9999999;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
