--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -44,7 +44,7 @@
             <div class="fixed-input col-md-12"
                  ng-class="{'animated fadeInDown': !home.listeningVoice, 'animated fadeOutUp': home.listeningVoice}">
                 <div class="text-overlay">
-                    <form novalidate data-ng-submit="home.saveUserInputValue()">
+                    <form novalidate data-ng-submit="home.userInputValue && home.saveUserInputValue()">
                         <input type="text" class="form-control"
                                data-ng-model="home.userInputValue" placeholder="Ask what's in your mind..">
                     </form>
