--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -349,3 +349,13 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.scroll-date-tooltip {
+  //display: none;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  position: fixed;
+  z-index: 1000;
+  padding: 5px 10px;
+  text-align:center;
+  border-radius:3px;
+}
