signup bugs solve, changes, voice text issue solve

--- a/web/app/styles/login-register.scss
+++ b/web/app/styles/login-register.scss
@@ -2,6 +2,11 @@
 
 .login-register {
 
+  .took-focus {
+    width: 100%;
+    height: 0;
+    border: none;
+  }
   /*  Shake animation  */
 
   .animated {
