--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -59,11 +59,15 @@
       //margin-left: -0.5px;
       display: none;
     }
-    //timeline-event:last-child {
-    //  li {
-    //    margin-bottom: 7.8%;
-    //  }
-    //}
+    timeline-event {
+      &:last-of-type{
+        li{
+          .is-min-padding{
+            margin-bottom: 70px;
+          }
+        }
+      }
+    }
     timeline-event:first-child {
       li {
         margin-top: 1.7%;
@@ -87,7 +91,9 @@
       }
     }
   }
-
+  .min-padding-bottom {
+    padding-bottom: 5em;
+  }
   /* when not listening */
   .bubble-pulse {
     animation: bubble-pulse 1.5s infinite;
