--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -5,14 +5,14 @@
                 <dic class="col-md-12 text-center">
                     <span ng-show="home.showDateTooltip" class="scroll-date-tooltip"
                           ng-class="{'animated fadeOut': !home.showDateTooltip}">
-                        Yesterday
+                        Today
                     </span>
                 </dic>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <timeline>
-                        <timeline-event ng-repeat="message in home.timeline track by $index"
+                        <timeline-event data-ng-repeat="message in home.timeline track by $index"
                                         side="{{message.from == 'BOT' ? 'left' : 'right'}}"
                                         when-visible="home.animateElementIn"
                                         when-not-visible="home.animateElementOut"
@@ -21,7 +21,7 @@
                                             <!--class="cursor no-timeline-badge-shadow {{message.from == 'BOT' ? 'danger' : 'success'}}">-->
                                 <!--<i class="fa hvr-grow-shadow fa-volume-up"></i>-->
                             <!--</timeline-badge>-->
-                            <timeline-panel class="timeline-panel-style">
+                            <timeline-panel class="timeline-panel-style" data-ng-class="{'is-min-padding': $index > 3}">
                                 <timeline-heading>
                                     <h4 ng-bind="message.from == 'BOT' ? 'Bot' : ''"></h4>
                                 </timeline-heading>
@@ -53,7 +53,7 @@
                  ng-class="{'animated fadeInDown': !home.listeningVoice, 'animated fadeOutUp': home.listeningVoice}">
                 <div class="text-overlay">
                     <form novalidate data-ng-submit="home.userInputValue && home.saveUserInputValue()">
-                        <input type="text" class="form-control"
+                        <input ng-disabled="home.sending" type="text" class="form-control"
                                data-ng-model="home.userInputValue" placeholder="Ask what's in your mind..">
                     </form>
                 </div>
