--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -32,6 +32,7 @@
       margin: 15px 0 10px;
     }
     p {
+      text-align: justify;
       font-family: 'Oxygen', sans-serif !important;
       word-wrap: break-word;
       line-height: 20px;
